<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="plus">+</string>
    <string name="starting_quantity">0</string>
    <string name="minus">-</string>
    <string name="order">Order</string>
    <string name="zero_quantity_toast_message">You didn\'t order anything</string>
    <string name="summary_name">Name: <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <string name="summary_whipped_cream">Add whipped cream? <xliff:g id="addWhippedCream" example="true">%b</xliff:g></string>
    <string name="summary_chocolate">Add chocolate? <xliff:g id="addChocolate" example="true">%b</xliff:g></string>
    <string name="summary_quantity">Quantity: <xliff:g id="quantity" example="2">%d</xliff:g></string>
    <string name="summary_total">Total: <xliff:g id="price" example="$10">%s</xliff:g></string>
    <string name="thank_you">Thank you!</string>
    <string name="email_subject">JustJava order for <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <string name="intent_email">Choose e-mail client</string>
    <string name="name_field_hint">Name</string>
</resources>
