<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/name_text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:hint="@string/name_field_hint"/>

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/toppings"/>

        <CheckBox
            android:id="@+id/whipped_cream_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="24dp"
            android:paddingEnd="0dp"
            android:paddingLeft="24dp"
            android:paddingRight="0dp"
            android:text="@string/whipped_cream"
            android:textSize="16sp"/>

        <CheckBox
            android:id="@+id/chocolate_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="24dp"
            android:paddingEnd="0dp"
            android:paddingLeft="24dp"
            android:paddingRight="0dp"
            android:text="@string/chocolate"
            android:textSize="16sp"/>

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/quantity"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/plus"
                android:onClick="increment" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:text="@string/starting_quantity"/>

            <Button
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/minus"
                android:onClick="decrement"/>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/order"
            android:onClick="submitOrder"/>
    </LinearLayout>
</ScrollView>